test/files/neg/t5969.check
t5969.scala:9: error: overloaded method value g with alternatives:
  (x: C2)String <and>
  (x: C1)String
 cannot be applied to (String)
    if (false) List(g(x)) else List[C1]() map g
                    ^
one error found
